--- a/api/Gemfile
+++ b/api/Gemfile
@@ -45,6 +45,7 @@ gem 'ember-source', '~> 1.11.0'
 
 gem 'bootstrap-sass', '~> 3.3.4'
 gem 'momentjs-rails', '~> 2.9.0'
+gem 'round_robin_tournament'
 
 group :development, :test do
   gem 'rspec-rails', '~> 3.3.3'
