--- a/api/Gemfile
+++ b/api/Gemfile
@@ -41,7 +41,8 @@ gem 'activeadmin', '1.0.0.pre1' #, github: 'activeadmin'
 gem 'devise'
 gem 'active_model_serializers', '~> 0.9.3'
 gem 'ember-rails'
-gem 'ember-source', '~> 1.11.0'
+# gem 'ember-source', '~> 1.11.0'
+gem 'ember-source', '~> 1.13.13'
 
 gem 'bootstrap-sass', '~> 3.3.4'
 gem 'momentjs-rails', '~> 2.9.0'
